--- a/pandora_console/include/styles/pandora.css
+++ b/pandora_console/include/styles/pandora.css
@@ -2857,3 +2857,40 @@ td.unused_field {
 td.empty_field {
 	background: url('../../images/long_arrow.png') no-repeat 100% center;
 }
+
+/* Shortcut bar */
+
+#shortcut_container {
+	position: fixed;
+	margin: 0px !important;
+	bottom: 0px;
+	left: 0px;
+}
+
+#shortcut_bar {
+	background-color: #333;
+	background-image: url(../../images/header_blackout.png);
+	border-top: 1px solid #808080;
+	border-right: 1px solid #808080;
+	border-top-right-radius: 5px;
+}
+
+#shortcut_button {
+	display: inline-block;
+	background-color: #333;
+	border: 1px solid #808080;
+	border-bottom: none;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+}
+
+.shortcut_item {
+	padding: 2px 10px;
+	text-decoration: none;
+}
+
+.shortcut_item>span {
+	color: #eee;
+	font-weight: bold;
+	font-size: 9pt;
+}
